--- a/jzbtop17081501.plist
+++ b/jzbtop17081501.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.dreamfairy.cn/dl/jzbtop17081501.ipa</string>
+					<string>http://assets.jzbtop.com/dl/jzbtop17081501.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
