--- a/jzbtop17081501.plist
+++ b/jzbtop17081501.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://www.dreamfairy.cn/dl/icon.png</string>
+					<string>http://assets.jzbtop.com/dl/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://www.dreamfairy.cn/dl/icon.png</string>
+					<string>http://assets.jzbtop.com/dl/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
